--- a/Work#6/index.html
+++ b/Work#6/index.html
@@ -9,25 +9,23 @@
   </head>
 
   <body>
-    <header class="menu_head">
-      <nav>
+    <header class="header">
+      <nav class="head_menu">
         <div>
-          <a href="./index.html"
+          <a class="menu_logo" href="./index.html"
             ><img src="./img/logo_brand.png" alt="logo_brand" />
           </a>
-          <button><img src="./img/icon_search.svg" alt="icon_search" /></button>
+          <button class="menu_icon_search"> </button>
         </div>
         <div>
-          <button><img src="./img/icon_menu.svg" alt="icon_menu" /></button>
-          <button>
-            <img src="./img/icon_profile.svg" alt="icon_profile" />
-          </button>
-          <button><img src="./img/icon_basked.svg" alt="icon_basked" /></button>
+          <button class="menu_icon_menu"> </button>
+          <button class="menu_icon_profile"> </button>
+          <button class="menu_icon_backed"> </button>
         </div>
       </nav>
       <section class="baner_backround">
         <img src="./img/head_baner_man.png" alt="baner_man" />
-        <div class="left_line">
+        <div class="baner_rigth_line_text">
           <h1>THE BRAND</h1>
           <h2>
             OF LUXERIOUS
@@ -36,35 +34,36 @@
         </div>
       </section>
     </header>
-    <main>
-      <section>
-        <div class="backroud_image_1">
-          <div class="mask">
-            <div>
+
+    <main class="main">
+      <section class="first_box">
+        <div class="frst_card_image_1"> <img src="./img/backround_for_women.png" alt="for_women" />
+          <div class="image_mask"> 
+            <div class="text_card">
               <h3>30% OFF</h3>
               <h2><span class="baner_color_text">FOR WOMEN</span></h2>
             </div>
           </div>
         </div>
-        <div class="backroud_image_2">
-          <div class="mask">
-            <div>
+        <div class="second_card_image_2"> <img src="./img/backround_for_men.png" alt="for_women" />
+          <div class="image_mask">
+            <div class="text_card">
               <h3>HOT DEAL</h3>
               <h2><span class="baner_color_text">FOR MEN</span></h2>
             </div>
           </div>
         </div>
-        <div class="backroud_image_3">
-          <div class="mask">
-            <div>
+        <div class="Third_card_image_3">
+          <div class="image_mask">
+            <div class="text_card">
               <h3>NEW ARRIVALS</h3>
               <h2><span class="baner_color_text">FOR KIDS</span></h2>
             </div>
           </div>
         </div>
-        <div class="backroud_image_4">
-          <div class="mask">
-            <div>
+        <div class="Four_card_image_4">
+          <div class="image_mask">
+            <div class="text_card">
               <h3>LUXIROUS & TRENDY</h3>
               <h2><span class="baner_color_text">ACCESORIES</span></h2>
             </div>
@@ -72,9 +71,9 @@
         </div>
       </section>
 
-      <section>
-        <h1>Fetured Items</h1>
-        <h2>Shop for items based on what we featured in this week</h2>
+      <section class="second_box">
+        <h1 class="title_text_second_box_h1">Fetured Items</h1>
+        <h2 class="title_text_second_box_h2">Shop for items based on what we featured in this week</h2>
         <div class="Item_box_image_1">
           <div>
             <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
@@ -82,7 +81,7 @@
               Known for her sculptural takes on traditional tailoring,
               Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
             </h3>
-            <h2 class="text_item_box_h2">$52.00</h2>
+            <h2 class="price_text_box_h2">$52.00</h2>
           </div>
         </div>
         <div class="Item_box_image_2">
@@ -92,7 +91,7 @@
               Known for her sculptural takes on traditional tailoring,
               Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
             </h3>
-            <h2 class="text_item_box_h2">$52.00</h2>
+            <h2 class="price_text_box_h2">$52.00</h2>
           </div>
         </div>
         <div class="Item_box_image_3">
@@ -102,7 +101,7 @@
               Known for her sculptural takes on traditional tailoring,
               Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
             </h3>
-            <h2 class="text_item_box_h2">$52.00</h2>
+            <h2 class="price_text_box_h2">$52.00</h2>
           </div>
         </div>
         <div class="Item_box_image_4">
@@ -112,7 +111,7 @@
               Known for her sculptural takes on traditional tailoring,
               Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
             </h3>
-            <h2 class="text_item_box_h2">$52.00</h2>
+            <h2 class="price_text_box_h2">$52.00</h2>
           </div>
         </div>
         <div class="Item_box_image_5">
@@ -122,7 +121,7 @@
               Known for her sculptural takes on traditional tailoring,
               Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
             </h3>
-            <h2 class="text_item_box_h2">$52.00</h2>
+            <h2 class="price_text_box_h2">$52.00</h2>
           </div>
         </div>
         <div class="Item_box_image_6">
@@ -132,7 +131,7 @@
               Known for her sculptural takes on traditional tailoring,
               Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
             </h3>
-            <h2 class="text_item_box_h2">$52.00</h2>
+            <h2 class="price_text_box_h2">$52.00</h2>
           </div>
         </div>
         <button class="brouse_button">Browse All Product</button>
