--- a/Work#6/index.html
+++ b/Work#6/index.html
@@ -10,21 +10,21 @@
 
   <body>
     <header class="header">
-      <nav class="head_menu">
-        <div>
+      <nav class="head_menu conteiner">
+        <div class="menu_left_site">
           <a class="menu_logo" href="./index.html"
             ><img src="./img/logo_brand.png" alt="logo_brand" />
           </a>
-          <button class="menu_icon_search"> </button>
+          <button class="button_menu_icon_search"> <img src="./img/icon_search.png" alt="logo_search" /> </button>
         </div>
-        <div>
-          <button class="menu_icon_menu"> </button>
-          <button class="menu_icon_profile"> </button>
-          <button class="menu_icon_backed"> </button>
+        <div class="menu_rigth_site">
+          <button class="button_menu_icon_menu"> <img src="./img/icon_menu.png" alt="logo_menu" /> </button>
+          <button class="button_menu_icon_profile"> <img src="./img/icon_profile.png" alt="logo_profile" /> </button>
+          <button class="button_menu_icon_backed"> <img src="./img/icon_basked.png" alt="logo_basked" /> </button>
         </div>
       </nav>
-      <section class="baner_backround">
-        <img src="./img/head_baner_man.png" alt="baner_man" />
+      <section class="baner_backround conteiner">
+        <img class="banner_image" src="./img/head_baner_man.png" alt="baner_man" />
         <div class="baner_rigth_line_text">
           <h1>THE BRAND</h1>
           <h2>
@@ -36,7 +36,7 @@
     </header>
 
     <main class="main">
-      <section class="first_box">
+      <section class="offer_box conteiner">
         <div class="frst_card_image_1"> 
           <img src="./img/backround_for_women.png" alt="for_women" />
           <div class="image_mask"> 
@@ -75,7 +75,7 @@
         </div>
       </section>
 
-      <section class="second_box">
+      <section class="product_box conteiner">
         <h1 class="title_text_second_box_h1">Fetured Items</h1>
         <h2 class="title_text_second_box_h2">Shop for items based on what we featured in this week</h2>
         <div class="Item_box_image_1">
