--- a/Work#6/index.html
+++ b/Work#6/index.html
@@ -15,16 +15,28 @@
           <a class="menu_logo" href="./index.html"
             ><img src="./img/logo_brand.png" alt="logo_brand" />
           </a>
-          <button class="button_menu_icon_search"> <img src="./img/icon_search.png" alt="logo_search" /> </button>
+          <button class="button_menu_icon_search">
+            <img src="./img/icon_search.png" alt="logo_search" />
+          </button>
         </div>
         <div class="menu_rigth_site">
-          <button class="button_menu_icon_menu"> <img src="./img/icon_menu.png" alt="logo_menu" /> </button>
-          <button class="button_menu_icon_profile"> <img src="./img/icon_profile.png" alt="logo_profile" /> </button>
-          <button class="button_menu_icon_backed"> <img src="./img/icon_basked.png" alt="logo_basked" /> </button>
+          <button class="button_menu_icon_menu">
+            <img src="./img/icon_menu.png" alt="logo_menu" />
+          </button>
+          <button class="button_menu_icon_profile">
+            <img src="./img/icon_profile.png" alt="logo_profile" />
+          </button>
+          <button class="button_menu_icon_backed">
+            <img src="./img/icon_basked.png" alt="logo_basked" />
+          </button>
         </div>
       </nav>
       <section class="baner_backround conteiner">
-        <img class="banner_image" src="./img/head_baner_man.png" alt="baner_man" />
+        <img
+          class="banner_image"
+          src="./img/head_baner_man.png"
+          alt="baner_man"
+        />
         <div class="baner_rigth_line_text">
           <h1>THE BRAND</h1>
           <h2>
@@ -37,16 +49,15 @@
 
     <main class="main">
       <section class="offer_box conteiner">
-        <div class="frst_card_image_1"> 
-          <img src="./img/backround_for_women.png" alt="for_women" />
-          <div class="image_mask"> 
+        <div class="frst_card_image_1">
+          <div class="image_mask">
             <div class="text_card">
               <h3>30% OFF</h3>
               <h2><span class="baner_color_text">FOR WOMEN</span></h2>
             </div>
           </div>
         </div>
-        <div class="second_card_image_2"> 
+        <div class="second_card_image_2">
           <img src="./img/backround_for_men.png" alt="for_man" />
           <div class="image_mask">
             <div class="text_card">
@@ -55,7 +66,7 @@
             </div>
           </div>
         </div>
-        <div class="Third_card_image_3"> 
+        <div class="Third_card_image_3">
           <img src="./img/backround_for_kinds.png" alt="for_kids" />
           <div class="image_mask">
             <div class="text_card">
@@ -64,9 +75,9 @@
             </div>
           </div>
         </div>
-        <div class="Four_card_image_4"> 
+        <div class="Four_card_image_4">
           <img src="./img/backround_accesories.png" alt="for_accesories" />
-          <div class="image_mask">
+          <div class="image_mask_long">
             <div class="text_card">
               <h3>LUXIROUS & TRENDY</h3>
               <h2><span class="baner_color_text">ACCESORIES</span></h2>
@@ -77,7 +88,9 @@
 
       <section class="product_box conteiner">
         <h1 class="title_text_second_box_h1">Fetured Items</h1>
-        <h2 class="title_text_second_box_h2">Shop for items based on what we featured in this week</h2>
+        <h2 class="title_text_second_box_h2">
+          Shop for items based on what we featured in this week
+        </h2>
         <div class="Item_box_image_1">
           <img src="./img/fetured_items_1.png" alt="item_1" />
           <div>
@@ -145,7 +158,7 @@
           </div>
         </div>
       </section>
-      <button class="brouse_button">Browse All Product</button>
+        <button class="brouse_button">Browse All Product</button>
     </main>
   </body>
 </html>
