--- a/Work#6/index.html
+++ b/Work#6/index.html
@@ -31,7 +31,7 @@
           </button>
         </div>
       </nav>
-      <section class="baner_backround conteiner">
+      <section class="baner_backround">
         <img
           class="banner_image"
           src="./img/head_baner_man.png"
@@ -49,7 +49,7 @@
 
     <main class="main">
       <section class="offer_box conteiner">
-        <div class="frst_card_image_1">
+        <div class="frst_card_image_1"> 
           <div class="image_mask">
             <div class="text_card">
               <h3>30% OFF</h3>
@@ -58,7 +58,6 @@
           </div>
         </div>
         <div class="second_card_image_2">
-          <img src="./img/backround_for_men.png" alt="for_man" />
           <div class="image_mask">
             <div class="text_card">
               <h3>HOT DEAL</h3>
@@ -67,7 +66,6 @@
           </div>
         </div>
         <div class="Third_card_image_3">
-          <img src="./img/backround_for_kinds.png" alt="for_kids" />
           <div class="image_mask">
             <div class="text_card">
               <h3>NEW ARRIVALS</h3>
@@ -76,8 +74,7 @@
           </div>
         </div>
         <div class="Four_card_image_4">
-          <img src="./img/backround_accesories.png" alt="for_accesories" />
-          <div class="image_mask_long">
+          <div class="image_mask">
             <div class="text_card">
               <h3>LUXIROUS & TRENDY</h3>
               <h2><span class="baner_color_text">ACCESORIES</span></h2>
@@ -157,8 +154,8 @@
             <h2 class="price_text_box_h2">$52.00</h2>
           </div>
         </div>
-      </section>
         <button class="brouse_button">Browse All Product</button>
+      </section>
     </main>
   </body>
 </html>
