--- a/Work#6/index.html
+++ b/Work#6/index.html
@@ -52,32 +52,32 @@
         <div class="frst_card_image_1"> 
           <div class="image_mask">
             <div class="text_card">
-              <h3>30% OFF</h3>
-              <h2><span class="baner_color_text">FOR WOMEN</span></h2>
+              <h3 class="baner_color_text_h3">30% OFF</h3>
+              <h2 class="baner_color_text_h2">FOR WOMEN</h2>
             </div>
           </div>
         </div>
         <div class="second_card_image_2">
           <div class="image_mask">
             <div class="text_card">
-              <h3>HOT DEAL</h3>
-              <h2><span class="baner_color_text">FOR MEN</span></h2>
+              <h3 class="baner_color_text_h3">HOT DEAL</h3>
+              <h2 class="baner_color_text_h2">FOR MEN</h2>
             </div>
           </div>
         </div>
         <div class="Third_card_image_3">
           <div class="image_mask">
             <div class="text_card">
-              <h3>NEW ARRIVALS</h3>
-              <h2><span class="baner_color_text">FOR KIDS</span></h2>
+              <h3 class="baner_color_text_h3">NEW ARRIVALS</h3>
+              <h2 class="baner_color_text_h2">FOR KIDS</h2>
             </div>
           </div>
         </div>
         <div class="Four_card_image_4">
           <div class="image_mask">
             <div class="text_card">
-              <h3>LUXIROUS & TRENDY</h3>
-              <h2><span class="baner_color_text">ACCESORIES</span></h2>
+              <h3 class="baner_color_text_h3">LUXIROUS & TRENDY</h3>
+              <h2 class="baner_color_text_h2">ACCESORIES</h2>
             </div>
           </div>
         </div>
@@ -90,7 +90,7 @@
         </h2>
         <div class="Item_box_image_1">
           <img src="./img/fetured_items_1.png" alt="item_1" />
-          <div>
+          <div class="Item_box_text">
             <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
             <h3 class="text_item_box_h3">
               Known for her sculptural takes on traditional tailoring,
@@ -101,7 +101,7 @@
         </div>
         <div class="Item_box_image_2">
           <img src="./img/fetured_items_2.png" alt="item_2" />
-          <div>
+          <div class="Item_box_text">
             <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
             <h3 class="text_item_box_h3">
               Known for her sculptural takes on traditional tailoring,
@@ -112,7 +112,7 @@
         </div>
         <div class="Item_box_image_3">
           <img src="./img/fetured_items_3.png" alt="item_3" />
-          <div>
+          <div class="Item_box_text">
             <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
             <h3 class="text_item_box_h3">
               Known for her sculptural takes on traditional tailoring,
@@ -123,7 +123,7 @@
         </div>
         <div class="Item_box_image_4">
           <img src="./img/fetured_items_4.png" alt="item_4" />
-          <div>
+          <div class="Item_box_text">
             <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
             <h3 class="text_item_box_h3">
               Known for her sculptural takes on traditional tailoring,
@@ -134,7 +134,7 @@
         </div>
         <div class="Item_box_image_5">
           <img src="./img/fetured_items_5.png" alt="item_5" />
-          <div>
+          <div class="Item_box_text">
             <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
             <h3 class="text_item_box_h3">
               Known for her sculptural takes on traditional tailoring,
@@ -145,7 +145,7 @@
         </div>
         <div class="Item_box_image_6">
           <img src="./img/fetured_items_6.png" alt="item_6" />
-          <div>
+          <div class="Item_box_text">
             <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
             <h3 class="text_item_box_h3">
               Known for her sculptural takes on traditional tailoring,
