gloval fix 1 if 2

--- a/Work#6/index.html
+++ b/Work#6/index.html
@@ -16,18 +16,18 @@
             ><img src="./img/logo_brand.png" alt="logo_brand" />
           </a>
           <button class="button_menu_icon_search">
-            <img src="./img/icon_search.png" alt="logo_search" />
+            <img src="./img/icon_search.svg" alt="logo_search" />
           </button>
         </div>
         <div class="menu_rigth_site">
           <button class="button_menu_icon_menu">
-            <img src="./img/icon_menu.png" alt="logo_menu" />
+            <img src="./img/icon_menu.svg" alt="logo_menu" />
           </button>
           <button class="button_menu_icon_profile">
-            <img src="./img/icon_profile.png" alt="logo_profile" />
+            <img src="./img/icon_profile.svg" alt="logo_profile" />
           </button>
           <button class="button_menu_icon_backed">
-            <img src="./img/icon_basked.png" alt="logo_basked" />
+            <img src="./img/icon_basked.svg" alt="logo_basked" />
           </button>
         </div>
       </nav>
@@ -41,7 +41,7 @@
           <h1>THE BRAND</h1>
           <h2>
             OF LUXERIOUS
-            <span class="baner_color_text">FASHION</span>
+            <span class="head_baner_color_text">FASHION</span>
           </h2>
         </div>
       </section>
@@ -83,78 +83,80 @@
         </div>
       </section>
 
-      <section class="product_box conteiner">
+      <section class="product conteiner">
         <h1 class="title_text_second_box_h1">Fetured Items</h1>
         <h2 class="title_text_second_box_h2">
           Shop for items based on what we featured in this week
         </h2>
-        <div class="Item_box_image_1">
-          <img src="./img/fetured_items_1.png" alt="item_1" />
-          <div class="Item_box_text">
-            <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
-            <h3 class="text_item_box_h3">
-              Known for her sculptural takes on traditional tailoring,
-              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-            </h3>
-            <h2 class="price_text_box_h2">$52.00</h2>
+        <div class="product_box">
+          <div class="Item_box_image_1">
+            <img src="./img/fetured_items_1.png" alt="item_1" />
+            <div class="Item_box_text">
+              <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
+              <h3 class="text_item_box_h3">
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+              </h3>
+              <h2 class="price_text_box_h2">$52.00</h2>
+            </div>
           </div>
-        </div>
-        <div class="Item_box_image_2">
-          <img src="./img/fetured_items_2.png" alt="item_2" />
-          <div class="Item_box_text">
-            <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
-            <h3 class="text_item_box_h3">
-              Known for her sculptural takes on traditional tailoring,
-              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-            </h3>
-            <h2 class="price_text_box_h2">$52.00</h2>
+          <div class="Item_box_image_2">
+            <img src="./img/fetured_items_2.png" alt="item_2" />
+            <div class="Item_box_text">
+              <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
+              <h3 class="text_item_box_h3">
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+              </h3>
+              <h2 class="price_text_box_h2">$52.00</h2>
+            </div>
           </div>
-        </div>
-        <div class="Item_box_image_3">
-          <img src="./img/fetured_items_3.png" alt="item_3" />
-          <div class="Item_box_text">
-            <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
-            <h3 class="text_item_box_h3">
-              Known for her sculptural takes on traditional tailoring,
-              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-            </h3>
-            <h2 class="price_text_box_h2">$52.00</h2>
+          <div class="Item_box_image_3">
+            <img src="./img/fetured_items_3.png" alt="item_3" />
+            <div class="Item_box_text">
+              <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
+              <h3 class="text_item_box_h3">
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+              </h3>
+              <h2 class="price_text_box_h2">$52.00</h2>
+            </div>
           </div>
-        </div>
-        <div class="Item_box_image_4">
-          <img src="./img/fetured_items_4.png" alt="item_4" />
-          <div class="Item_box_text">
-            <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
-            <h3 class="text_item_box_h3">
-              Known for her sculptural takes on traditional tailoring,
-              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-            </h3>
-            <h2 class="price_text_box_h2">$52.00</h2>
+          <div class="Item_box_image_4">
+            <img src="./img/fetured_items_4.png" alt="item_4" />
+            <div class="Item_box_text">
+              <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
+              <h3 class="text_item_box_h3">
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+              </h3>
+              <h2 class="price_text_box_h2">$52.00</h2>
+            </div>
           </div>
-        </div>
-        <div class="Item_box_image_5">
-          <img src="./img/fetured_items_5.png" alt="item_5" />
-          <div class="Item_box_text">
-            <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
-            <h3 class="text_item_box_h3">
-              Known for her sculptural takes on traditional tailoring,
-              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-            </h3>
-            <h2 class="price_text_box_h2">$52.00</h2>
+          <div class="Item_box_image_5">
+            <img src="./img/fetured_items_5.png" alt="item_5" />
+            <div class="Item_box_text">
+              <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
+              <h3 class="text_item_box_h3">
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+              </h3>
+              <h2 class="price_text_box_h2">$52.00</h2>
+            </div>
           </div>
-        </div>
-        <div class="Item_box_image_6">
-          <img src="./img/fetured_items_6.png" alt="item_6" />
-          <div class="Item_box_text">
-            <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
-            <h3 class="text_item_box_h3">
-              Known for her sculptural takes on traditional tailoring,
-              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-            </h3>
-            <h2 class="price_text_box_h2">$52.00</h2>
+          <div class="Item_box_image_6">
+            <img src="./img/fetured_items_6.png" alt="item_6" />
+            <div class="Item_box_text">
+              <h1 class="text_item_box_h1">ELLERY X M'O CAPSULE</h1>
+              <h3 class="text_item_box_h3">
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+              </h3>
+              <h2 class="price_text_box_h2">$52.00</h2>
+            </div>
           </div>
+          <button class="brouse_button">Browse All Product</button>
         </div>
-        <button class="brouse_button">Browse All Product</button>
       </section>
     </main>
   </body>
