elemets html create and beta version, new css add

--- a/Work#9/index.html
+++ b/Work#9/index.html
@@ -158,6 +158,68 @@
           <button class="brouse_button">Browse All Product</button>
         </div>
       </section>
+      
+      <section class="features">
+        <div class="delivery">
+          <img class="free_delivery_image" src="./img/free_delivery.svg" alt="Free Delivery" />
+          <h1 class="free_delivery_h1">Free Delivery</h1>
+          <h3 class="all_features_text_h3">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</h3>
+        </div>
+        <div class="sales">
+          <img class="sales_discount_image" src="./img/sales_discounts.svg" alt="Sales discount" />
+          <h1 class="sales_discount_h1">Sales & discounts</h1>
+          <h3 class="all_features_text_h3">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</h3>
+        </div>
+        <div class="quality">
+          <img class="quality_assurance_image" src="./img/quality_assurance.svg" alt="Quality assurance" />
+          <h1 class="quality_assurance_h1">Quality assurance</h1>
+          <h3 class="all_features_text_h3">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</h3>
+        </div>
+      </section>
+
+      <section class="box_down_baner">
+        <div class="down_image">
+          <div class="down_mask">
+            <div class="box_down_left_elemetns">
+              <img class="down_image_woman_head" src="./img/down_face_women.png" alt="Woman Head" />
+              <h2 class="box_text_left_element_h2">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</h2>
+            </div>
+            <div class="box_down_rigth_elemetns">
+              <h1 class="box_text_left_element_h1">SUBSCRIBE <span>FOR OUR NEWLETTER AND PROMOTION</span></h1>
+              <button class="box_button_1"><span>Enter Your Email</span></button>
+              <button class="box_button_2"><span>Subscribe</span></button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="copyright">
+        <div class="copy_left_site">
+          <h2 class="copy_text_left_site_h2">© 2022  Brand  All Rights Reserved.</h2>
+        </div>
+        <div class="copy_rigth_site">
+          <div class="img_facebook">
+            <div class="img_facebook_mask"> 
+              <img src="#" alt="Facebook" />
+            </div>
+          </div>
+          <div class="img_instagramm">
+            <div class="img_instagramm_mask"> 
+              <img src="#" alt="Instagramm" />
+            </div>
+          </div>
+          <div class="img_pinteres">
+            <div class="img_pinteres_mask"> 
+              <img src="#" alt="Pinteres" />
+            </div>
+          </div>
+          <div class="img_twwiter">
+            <div class="img_twwiter_mask"> 
+              <img src="#" alt="Twwiter" />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
