--- a/Work#9/index.html
+++ b/Work#9/index.html
@@ -200,22 +200,22 @@
         <div class="copy_rigth_site">
           <div class="img_facebook">
             <div class="img_facebook_mask"> 
-              <img src="#" alt="Facebook" />
+              <img src="./img/facebook.svg" alt="Facebook" />
             </div>
           </div>
           <div class="img_instagramm">
             <div class="img_instagramm_mask"> 
-              <img src="#" alt="Instagramm" />
+              <img src="./img/instagram.svg" alt="Instagramm" />
             </div>
           </div>
           <div class="img_pinteres">
             <div class="img_pinteres_mask"> 
-              <img src="#" alt="Pinteres" />
+              <img src="./img/pinterest.svg" alt="Pinteres" />
             </div>
           </div>
           <div class="img_twwiter">
             <div class="img_twwiter_mask"> 
-              <img src="#" alt="Twwiter" />
+              <img src="./img/twitter1.svg" alt="Twwiter" />
             </div>
           </div>
         </div>
