--- a/Work#9/index.html
+++ b/Work#9/index.html
@@ -162,17 +162,17 @@
       <section class="features">
         <div class="delivery">
           <img class="free_delivery_image" src="./img/free_delivery.svg" alt="Free Delivery" />
-          <h1 class="free_delivery_h1">Free Delivery</h1>
+          <h1 class="all_features_text_h1">Free Delivery</h1>
           <h3 class="all_features_text_h3">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</h3>
         </div>
         <div class="sales">
           <img class="sales_discount_image" src="./img/sales_discounts.svg" alt="Sales discount" />
-          <h1 class="sales_discount_h1">Sales & discounts</h1>
+          <h1 class="all_features_text_h1">Sales & discounts</h1>
           <h3 class="all_features_text_h3">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</h3>
         </div>
         <div class="quality">
           <img class="quality_assurance_image" src="./img/quality_assurance.svg" alt="Quality assurance" />
-          <h1 class="quality_assurance_h1">Quality assurance</h1>
+          <h1 class="all_features_text_h1">Quality assurance</h1>
           <h3 class="all_features_text_h3">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</h3>
         </div>
       </section>
@@ -185,9 +185,12 @@
               <h2 class="box_text_left_element_h2">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</h2>
             </div>
             <div class="box_down_rigth_elemetns">
-              <h1 class="box_text_left_element_h1">SUBSCRIBE <span>FOR OUR NEWLETTER AND PROMOTION</span></h1>
-              <button class="box_button_1"><span>Enter Your Email</span></button>
-              <button class="box_button_2"><span>Subscribe</span></button>
+              <h1 class="box_text_rigth_element_h1">SUBSCRIBE </h1>
+              <h2 class="box_text_rigth_element_h2">FOR OUR NEWLETTER AND PROMOTION</h2>
+              <div class=" buttons_box_down">
+                <button class="box_button_1"><h3 class="Enter_email_button_text">Enter Your Email</h3></button>
+                <button class="box_button_2"><h3 class="Subscribe_button_text">Subscribe</h3></button>
+              </div>
             </div>
           </div>
         </div>
