--- a/Work#9/index.html
+++ b/Work#9/index.html
@@ -191,8 +191,9 @@
               <h1 class="box_text_rigth_element_h1">SUBSCRIBE </h1>
               <h2 class="box_text_rigth_element_h2">FOR OUR NEWLETTER AND PROMOTION</h2>
               <div class=" buttons_box_down">
-                <button class="box_button_1"><h3 class="Enter_email_button_text">Enter Your Email</h3></button>
-                <button class="box_button_2"><h3 class="Subscribe_button_text">Subscribe</h3></button>
+                <input class="input_button_1" type="text" placeholder="Enter Your Email" />
+                <!-- <button class="box_button_1"><h3 class="Enter_email_button_text">Enter Your Email</h3></button> -->
+                <button class="box_button_1"><h3 class="Subscribe_button_text">Subscribe</h3></button>
               </div>
             </div>
           </div>
