--- a/Work#9/index.html
+++ b/Work#9/index.html
@@ -48,6 +48,26 @@
             <span class="head_baner_color_text">FASHION</span>
           </h2>
         </div>
+        <div class="menu">
+          <div class="menu_category">
+            <div class="menu_category_man">
+              <div class="man_menu_list"> 
+                <!--  -->
+              </div>
+            </div>
+            <div class="menu_category_women">
+              <div class="women_menu_list">
+                <!--  -->
+              </div>
+            </div>
+            <div class="menu_category_kinds">
+              <div class="kinds_menu_list">
+                <!--  -->
+              </div>
+            </div>
+
+          </div>
+        </div>
       </section>
     </header>
 
