progress work menu

--- a/Work#9/index.html
+++ b/Work#9/index.html
@@ -49,20 +49,36 @@
           </h2>
         </div>
         <div class="menu">
+          <h1 class="title_h1">MENU</h1>
           <div class="menu_category">
             <div class="menu_category_man">
-              <div class="man_menu_list"> 
-                <!--  -->
+              <a href="#" class="menu_title">MAN</a>
+              <div class="menu_list_man"> 
+                <a class="menu_link" href="#">Accessories</a>
+                <a class="menu_link" href="#">Bags</a>
+                <a class="menu_link" href="#">Denim</a>
+                <a class="menu_link" href="#">T-Shirts</a>
               </div>
             </div>
             <div class="menu_category_women">
-              <div class="women_menu_list">
-                <!--  -->
+              <a href="#" class="menu_title">WOMEN</a>
+              <div class="menu_list_women">
+                <a class="menu_link" href="#">Accessories</a>
+                <a class="menu_link" href="#">Jackets & Coats</a>
+                <a class="menu_link" href="#">Polos</a>
+                <a class="menu_link" href="#">T-Shirts</a>
+                <a class="menu_link" href="#">Shirts</a>
               </div>
             </div>
             <div class="menu_category_kinds">
-              <div class="kinds_menu_list">
-                <!--  -->
+              <a href="#" class="menu_title">KIDS</a>
+              <div class="menu_list_kids">
+                <a class="menu_link" href="#">Accessories</a>
+                <a class="menu_link" href="#">Jackets & Coats</a>
+                <a class="menu_link" href="#">Polos</a>
+                <a class="menu_link" href="#">T-Shirts</a>
+                <a class="menu_link" href="#">Shirts</a>
+                <a class="menu_link" href="#">Bags</a>
               </div>
             </div>
 
